# openkore-ai

./: .gitignore  FINAL_VERIFICATION_REPORT.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md
openkore-ai/ai-engine/: CMakeLists.txt  README.md
openkore-ai/ai-engine/include/: logger.hpp  types.hpp
openkore-ai/ai-engine/include/coordinators/: combat_coordinator.hpp  consumables_coordinator.hpp  coordinator_base.hpp  coordinator_manager.hpp  economy_coordinator.hpp  navigation_coordinator.hpp  npc_coordinator.hpp  planning_coordinator.hpp  progression_coordinator.hpp  social_coordinator.hpp  stub_coordinators.hpp
openkore-ai/ai-engine/include/decision/: llm.hpp  ml.hpp  reflex.hpp  rules.hpp
openkore-ai/ai-engine/src/: logger.cpp  main.cpp
openkore-ai/ai-engine/src/api/: .gitkeep
openkore-ai/ai-engine/src/coordinators/: .gitkeep  combat_coordinator.cpp  consumables_coordinator.cpp  coordinator_base.cpp  coordinator_manager.cpp  economy_coordinator.cpp  navigation_coordinator.cpp  npc_coordinator.cpp  planning_coordinator.cpp  progression_coordinator.cpp  social_coordinator.cpp  stub_coordinators.cpp
openkore-ai/ai-engine/src/decision/: .gitkeep  llm.cpp  ml.cpp  reflex.cpp  rules.cpp
openkore-ai/ai-engine/src/pdca/: .gitkeep
openkore-ai/ai-engine/tests/: .gitkeep
openkore-ai/ai-service/: .env  .env.example  QUICK_START.md  README.md  START_AUTONOMOUS_HEALING.bat  pyproject.toml  requirements-optional.txt  requirements.txt  research_crewai.py  research_crewai_detailed.py  run_healing.py
openkore-ai/ai-service/data/: autonomous_config.json  equipment_loadouts.json  inventory_rules.json  job_build_variants.json  job_builds.json  job_change_locations.json  loot_config.json  loot_config_user.json  loot_priority_database.json  map_metadata.json  monster_db.json  npc_config.json  npc_locations.json  openkore-ai.db  openkore-ai.db-shm  openkore-ai.db-wal  playstyles.json  quest_patterns.json  refinement_config.json  resources.json  skill_metadata.json  skill_rotations.json  strategic_config.json  thresholds_config.json  triggers_config.json  triggers_config_expanded.json  user_intent.json  user_intent_emergency.json
openkore-ai/ai-service/data-validation/: config.json  field_mappings.json  main_validator.py  requirements.txt
openkore-ai/ai-service/data-validation/extractors/: __init__.py  item_extractor.py  monster_extractor.py  yaml_parser.py
openkore-ai/ai-service/docs/: EVENTMACRO_COMPLETE_REFERENCE.md
openkore-ai/ai-service/examples/: start_macro_system.py
openkore-ai/ai-service/scripts/: import_databases.py  monitor_integration.py  verify_build_integration.py  verify_integration.py
openkore-ai/ai-service/src/: autonomous_handlers.py  main.py
openkore-ai/ai-service/src/agents/: .gitkeep  (+4 more)
openkore-ai/ai-service/tests/: .gitkeep
openkore-ai/ai-service/tools/: auto_configure.py  extract_rathena_data.py
(+250 files in other folders)
