[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openkore-ai-service"
version = "1.0.0"
description = "Python AI Service for OpenKore Advanced AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "openai>=1.10.0",
    "anthropic>=0.9.0",
    "openmemory>=0.2.1",
    "crewai>=0.11.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.0",
    "onnxruntime>=1.16.3",
    "pyyaml>=6.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
